<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUser">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    app:layout_constraintEnd_toEndOf="@id/img_avatar"
                    app:layout_constraintStart_toStartOf="@id/img_avatar"
                    app:layout_constraintTop_toBottomOf="@id/img_avatar" />

                <TextView
                    android:id="@+id/tvUname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    app:layout_constraintEnd_toEndOf="@id/tvName"
                    app:layout_constraintStart_toStartOf="@id/tvName"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <TextView
                    android:id="@+id/tvCountFollower"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:text="@string/countfollower"
                    app:layout_constraintEnd_toStartOf="@id/tvFollower"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvUname" />

                <TextView
                    android:id="@+id/tvFollower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"
                    app:layout_constraintEnd_toStartOf="@id/tvCountFollowing"
                    app:layout_constraintStart_toEndOf="@+id/tvCountFollower"
                    app:layout_constraintTop_toBottomOf="@id/tvUname" />

                <TextView
                    android:id="@+id/tvCountFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/countfollowing"
                    app:layout_constraintEnd_toStartOf="@id/tvFollowing"
                    app:layout_constraintStart_toEndOf="@+id/tvFollower"
                    app:layout_constraintTop_toBottomOf="@id/tvUname" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCountFollowing"
                    app:layout_constraintTop_toBottomOf="@id/tvUname" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/company"
                    android:text="@string/company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCountFollower" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location"
                    android:text="@string/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCompany" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>